PartyHighlighterComponent: Prevent image overflow from taking up space

--- a/src/app/components/party-highlighter/party-highlighter.component.css
+++ b/src/app/components/party-highlighter/party-highlighter.component.css
@@ -12,6 +12,7 @@ div {
     height: 100%;
     clip-path: polygon(10% 0%, 100% 0%, 90% 100%, 0% 100%);
     background: black;
+    contain: paint;
     transform: var(--container-transform);
 
     & img {
